# move

./: .gitattributes  .gitignore  Cargo.toml  README.md
move-binary-format/: Cargo.toml
move-compiler/src/shared/: mod.rs
move-compiler/src/unit_test/: filter_test_members.rs
move-compiler/src/verification/: ast_filter.rs
move-compiler/tests/move_check/parser/: aptos_stdlib_attributes.exp  aptos_stdlib_attributes2.exp  attribute_placement.exp  attribute_variants.exp  duplicate_attributes.exp  testonly.exp  testonly.move
move-core/types/src/: effects.rs  language_storage.rs  resolver.rs
move-prover/lab/src/: benchmark.rs
move-prover/src/: cli.rs
move-vm/integration-tests/: Cargo.toml
move-vm/integration-tests/src/tests/: bad_entry_point_tests.rs  bad_storage_tests.rs  binary_format_version.rs  cache_tests.rs  exec_func_effects_tests.rs  function_arg_tests.rs  instantiation_tests.rs  invariant_violation_tests.rs  leak_tests.rs  loader_tests.rs  loader_tests_update_modules.move  mod.rs  mutated_accounts_tests.rs  native_tests.rs  nested_loop_tests.rs  regression_tests.rs  return_value_tests.rs  vm_arguments_tests.rs
move-vm/integration-tests/src/tests/cache_test_modules/: plus.move  plus_update.move  plus_update_delete_function.move  plus_update_private_function.move
move-vm/runtime/: Cargo.toml
move-vm/runtime/src/: checksum_cache.rs  config.rs  data_cache.rs  debug.rs  interpreter.rs  lib.rs  move_vm.rs  native_functions.rs  runtime.rs  session.rs  session_cache.rs  tracing.rs
move-vm/runtime/src/loader/: access_specifier_loader.rs  cache.rs  function.rs  loader.rs  loader_impl.rs  mod.rs  module.rs  resolver.rs  script.rs  store.rs  type_loader.rs
move-vm/runtime/src/storage/: environment.rs
move-vm/test-utils/: Cargo.toml
move-vm/test-utils/src/: extensions.rs  gas_schedule.rs  lib.rs  storage.rs
move-vm/types/src/: resolver.rs
move-vm/types/src/delayed_values/: delayed_field_id.rs
move-vm/types/src/loaded_data/: runtime_access_specifier.rs  runtime_access_specifiers_prop_tests.rs  runtime_types.rs
move-vm/types/src/values/: values_impl.rs
testing-infra/test-generation/src/: lib.rs
testing-infra/transactional-test-runner/src/: vm_test_harness.rs
tools/move-cli/: Cargo.toml
tools/move-cli/src/base/: test.rs
tools/move-cli/src/sandbox/commands/: publish.rs  run.rs
tools/move-cli/src/sandbox/utils/: mod.rs  on_disk_state_view.rs
tools/move-cli/tests/build_tests/dependency_chain/: args.exp
tools/move-cli/tests/build_tests/dev_address/: args.exp
tools/move-cli/tests/build_tests/empty_module_no_deps/: args.exp
tools/move-cli/tests/build_tests/include_exclude_stdlib/: args.exp
tools/move-cli/tests/sandbox_tests/multi_module_publish/: args.exp
tools/move-package/tests/test_sources/compilation/basic_no_deps/: Move.exp
tools/move-package/tests/test_sources/compilation/basic_no_deps_address_assigned/: Move.exp
tools/move-package/tests/test_sources/compilation/basic_no_deps_address_not_assigned_with_dev_assignment/: Move.exp
tools/move-package/tests/test_sources/compilation/basic_no_deps_test_mode/: Move.exp
tools/move-package/tests/test_sources/compilation/diamond_problem_backflow_resolution/: Move.exp
tools/move-package/tests/test_sources/compilation/multiple_deps_rename/: Move.exp
tools/move-package/tests/test_sources/compilation/multiple_deps_rename_one/: Move.exp
tools/move-package/tests/test_sources/compilation/one_dep/: Move.exp
tools/move-package/tests/test_sources/compilation/one_dep_assigned_address/: Move.exp
tools/move-package/tests/test_sources/compilation/one_dep_renamed/: Move.exp
tools/move-package/tests/test_sources/compilation/test_symlinks/: Move.exp
tools/move-package/tests/test_sources/parsing/invalid_identifier_package_name/: Move.exp
tools/move-package/tests/test_sources/parsing/minimal_manifest/: Move.exp
tools/move-package/tests/test_sources/resolution/basic_no_deps/: Move.exp
tools/move-package/tests/test_sources/resolution/basic_no_deps_address_assigned/: Move.exp
tools/move-package/tests/test_sources/resolution/basic_no_deps_address_not_assigned_with_dev_assignment/: Move.exp
tools/move-package/tests/test_sources/resolution/dep_good_digest/: Move.exp
tools/move-package/tests/test_sources/resolution/diamond_problem_backflow_resolution/: Move.exp
tools/move-package/tests/test_sources/resolution/diamond_problem_no_conflict/: Move.exp
tools/move-package/tests/test_sources/resolution/multiple_deps_rename/: Move.exp
tools/move-package/tests/test_sources/resolution/one_dep/: Move.exp
tools/move-package/tests/test_sources/resolution/one_dep_assigned_address/: Move.exp
tools/move-package/tests/test_sources/resolution/one_dep_multiple_of_same_name/: Move.exp
tools/move-package/tests/test_sources/resolution/one_dep_reassigned_address/: Move.exp
tools/move-package/tests/test_sources/resolution/one_dep_unification_across_local_renamings/: Move.exp
tools/move-resource-viewer/src/: fat_type.rs
tools/move-unit-test/src/: lib.rs  test_runner.rs
tools/move-unit-test/tests/test_sources/: address_args.exp  arithmetic_errors.exp  construct_data.exp  cross_module_aborts.exp  do_nothing.exp  expected_abort_no_abort.exp  missing_data.exp  native_abort.exp  native_signer_creation.exp  native_signer_creation.storage.exp  non_exsistent_native.exp  other_expected_failures.exp  out_of_gas.exp  proposal_test.exp  proposal_test.storage.exp  signer_args.exp  storage_on_error_empty_and_non_empty.exp  storage_on_error_empty_and_non_empty.storage.exp  storage_test.exp  timeout.exp  unexpected_abort.exp  use_unit_test_module.exp
